# vardene

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mypy.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: test.yml
docs/: faq.md  openapi.yaml
examples/: 01_analyse_a_word.py  02_tag_a_sentence.py  03_inflect_phrase.py  README.md
paper/: tezaurs_python_port.tex  vardene_python_port.tex
tests/: parity.py  parity_crf.py  test_parity.py  test_unit.py
tezaurs/: all_endings.py  analyzer.py  attributes.py  crf_tagger.py  inflector.py  lexicon.py  markup.py  mijas.py  mijas_dsl.py  mijas_ltg.py  paradigm.py  statistics.py  trie.py  variants.py  wordform.py
tezaurs/api/: __init__.py  __main__.py  app.py  serialization.py
tezaurs/api/static/: app.js  style.css
tezaurs/api/templates/: index.html
tezaurs/data/: form_strong_overrides.json  paradigms.json  statistics.json  tag_bigrams.json  tagset.json  tagset_tilde.json  tokenizer.json
tools/: benchmark.py  extract_data.py  lexemes.py  paradigms.py  statistics.py  tagset.py  tokenizer.py  train_crf_pos.py  train_crf_subtag.py  train_crf_tagger.py  train_disambiguator.py  train_per_pos_classifier.py
vardene/: all_endings.py  analyzer.py  attributes.py  crf_tagger.py  inflector.py  lexicon.py  markup.py  mijas.py  mijas_dsl.py  mijas_ltg.py  paradigm.py  phrase.py  splitting.py  statistics.py  valency.py  variants.py  wordform.py
vardene/api/: __init__.py  __main__.py  app.py  serialization.py
vardene/api/static/: app.js  style.css
vardene/api/templates/: index.html
vardene/data/: adverb_pakape.json  crf_pos.crfsuite  form_disambiguation.json  verb_transitivity.json  verb_type.json
