[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tezaurs"
version = "0.1.0"
description = "Latvian morphology — Python port of LU MII morphology library"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
dependencies = [
    "pyarrow>=15.0",
]

[project.optional-dependencies]
tools = [
    "lxml>=5.0",
]
dev = [
    "lxml>=5.0",
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
tezaurs-extract = "tools.extract_data:main"

[tool.hatch.build.targets.wheel]
packages = ["tezaurs"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
